Bug 1832770 - Cherry-pick upstream libwebrtc commit 7b0d7f48fb. r=grulja,webrtc-reviewers,mjf, a=dmeehan

Upstream commit:
    PipeWire capturer: fix fcntl call when duplicating a file descriptor

    The fcntl() call has variable arguments, therefore we need to pass 0 to
    specify there are no other arguments for this call, otherwise we might
    end up with an argument that is random garbage.

    Bug: webrtc:15174
    Change-Id: I34f16a942d80913b667d8ade7eed557b0233be01
    Reviewed-on: https://webrtc-review.googlesource.com/c/src/+/305120
    Reviewed-by: Alexander Cooper <alcooper@chromium.org>
    Commit-Queue: Jan Grulich <grulja@gmail.com>
    Cr-Commit-Position: refs/heads/main@{#40060}

Differential Revision: https://phabricator.services.mozilla.com/D178009